--- a/src/app/emailmanagement/emailmanagement.component.html
+++ b/src/app/emailmanagement/emailmanagement.component.html
@@ -32,120 +32,6 @@
     </div>
 </div>
 
-<!-- <mat-vertical-stepper #stepper *ngIf="!chooseComp && _stepper">
-    <mat-step [stepControl]="emailSenderGroup">
-        <form dir="rtl" [formGroup]="emailSenderGroup" autocomplete="off">
-            <ng-template matStepLabel>חלק פנייה בסיסי</ng-template>
-            <ol class="list-style">
-                <div class="full-width row">
-                    <li class="border-me col-6">
-                        <div class="col-12 text-right">
-                            <label>תאריך פנייה</label>
-                            <mat-form-field appearance="fill">
-                                <input matInput formControlName="EmailDateTime" (focus)="picker3.open()" [matDatepicker]="picker3">
-                                <mat-datepicker-toggle matSuffix [for]="picker3">
-                                </mat-datepicker-toggle>
-                                <mat-datepicker #picker3></mat-datepicker>
-                            </mat-form-field>
-                        </div>
-                    </li>
-                    <li class="border-me col-6">
-                        <div class="col-12 text-right">
-                            <div class="col-12 text-right">
-                                <label>שם הפונה</label>
-                            </div>
-                            <mat-form-field class="example-full-width">
-                                <input type="text" matInput formControlName="CompName">
-                            </mat-form-field>
-                        </div>
-                    </li>
-                </div>
-                <div class="full-width row">
-                    <li class="border-me col-6">
-                        <div class="col-12 text-right">
-                            <label>מספר טלפון הפונה</label>
-                        </div>
-                        <mat-form-field class="example-full-width">
-                            <input type="text" matInput formControlName="CompPhone">
-                        </mat-form-field>
-                    </li>
-                    <li class="border-me col-6">
-                        <div class="col-12 text-right">
-                            <label>אימייל הפונה</label>
-                        </div>
-                        <mat-form-field class="example-full-width">
-                            <input type="text" matInput formControlName="CompEmail">
-                        </mat-form-field>
-                    </li>
-                </div>
-                <div class="full-width row">
-                    <li class="border-me col-6">
-                        <div class="col-12 text-right">
-                            <label>מקור פניה</label>
-                        </div>
-                        <mat-form-field class="full-width">
-                            <mat-select formControlName="EmailSubject" ng-model="myVar">
-                                <mat-option *ngFor="let related of compSource" [value]="related.value">
-                                    {{related.viewValue}}
-                                </mat-option>
-                            </mat-select>
-                        </mat-form-field>
-                    </li>
-                    <li class="border-me col-6">
-                        <div class="col-12 text-right">
-                            <label>נושא הפנייה</label>
-                        </div>
-                        <mat-form-field class="full-width">
-                            <mat-select formControlName="CompSubject" ng-model="myVar">
-                                <mat-option *ngFor="let emailSub of emailSubjectsArr" [value]="emailSub.Text">
-                                    {{emailSub.Text}}
-                                </mat-option>
-                            </mat-select>
-                        </mat-form-field>
-                    </li>
-                </div>
-                <div class="full-width row">
-                    <li class="border-me col-6">
-                        <div class="col-12 text-right">
-                            <label>תאור האירוע</label>
-                        </div>
-                        <mat-form-field class="example-full-width">
-                            <textarea type="text" matInput cols="2" formControlName="ContentToShow"></textarea>
-                        </mat-form-field>
-                    </li>
-                    <li class="border-me col-6">
-                        <div class="col-12 text-right">
-                            <label>מחלקה</label>
-                        </div>
-                        <mat-form-field appearance="fill">
-                            <mat-label>בחר מחלקה</mat-label>
-                            <mat-select formControlName="EmailDepartment">
-                                <mat-option *ngFor="let dept of department" [value]="dept.Depart_Name">
-                                    {{dept.Depart_Name}}
-                                </mat-option>
-                            </mat-select>
-                        </mat-form-field>
-                    </li>
-                </div>
-            </ol>
-            <div>
-                <button mat-button class="nextBtn" matStepperNext>הבא</button>
-            </div>
-        </form>
-    </mat-step>
-    <mat-step>
-        <ng-template matStepLabel>סיום</ng-template>
-        <p>שמירה וסיום</p>
-        <div>
-            <button mat-button matStepperPrevious>חזרה</button>
-            <button class="full-width mb-5" style="font-weight: bold;font-size: 20px;color: white;" color="primary"
-                (click)="submitComplaint(_ifUpdate,_ifSplit)" type="submit" mat-raised-button>
-                <span>הוספת פנייה</span>
-            </button>
-        </div>
-    </mat-step>
-</mat-vertical-stepper> -->
-
 <form dir="rtl" [formGroup]="manageComplaintForm" autocomplete="off" *ngIf="!chooseComp">
 
     <mat-card class="full-width text-center">
@@ -164,27 +50,6 @@
                     <mat-datepicker #pickers></mat-datepicker>
                 </mat-form-field>
             </div>
-            <!-- <div class="col-4">
-                <button mat-raised-button class="btn btn-primary btn-raised float-left"
-                    (click)="shareComplaintWithOthers()" matTooltip="קישור מנהל לפנייה">
-                    <span class="material-icons">
-                        reply
-                    </span>
-                </button>
-                <form class="example-form">
-                    <mat-form-field class="example-full-width">
-                        <mat-label>קישור אחראי לפנייה</mat-label>
-                        <input type="text" placeholder="התחל הקלדה .." aria-label="manager" matInput
-                            [formControl]="myControl" [matAutocomplete]="auto">
-                        <mat-autocomplete #auto="matAutocomplete">
-                            <mat-option *ngFor="let option of filteredOptions | async"
-                                value="{{option.firstname}} {{option.lastname}}">
-                                {{option.firstname}} {{option.lastname}}
-                            </mat-option>
-                        </mat-autocomplete>
-                    </mat-form-field>
-                </form>
-            </div> -->
         </div>
     </mat-card>
 
@@ -225,18 +90,6 @@
                                     <input type="text" matInput formControlName="CompEmail">
                                 </mat-form-field>
                             </li>
-                            <!-- <li class="border-me col-6">
-                                <div class="col-12 text-right">
-                                    <label>מקור פניה</label>
-                                </div>
-                                <mat-form-field class="full-width">
-                                    <mat-select formControlName="EmailSubject" ng-model="myVar">
-                                        <mat-option *ngFor="let related of compSource" [value]="related.value">
-                                            {{related.viewValue}}
-                                        </mat-option>
-                                    </mat-select>
-                                </mat-form-field>
-                            </li> -->
                             <li class="border-me col-6">
                                 <div class="col-12 text-right">
                                     <label>נושא הפנייה</label>
@@ -322,29 +175,26 @@
                     </div>
                     <div class="full-width row">
                         <li class="border-me col-6">
-                            <div class="col-12 text-right">
-                                <label>שם עובד</label>
-                            </div>
-                            <!-- <mat-form-field class="example-full-width">
-                                <input type="text" matInput formControlName="RelevantEmployee1">
-                            </mat-form-field> -->
-                            <mat-form-field class="example-chip-list" appearance="fill">
-                                <mat-label>שם עובד</mat-label>
-                                <mat-chip-list #chipList aria-label="Fruit selection">
-                                    <mat-chip *ngFor="let fruit of fruits" [selectable]="selectable"
-                                        [removable]="removable" (removed)="remove(fruit)">
-                                        <div>{{fruit.Employee_Name}}
-                                            <mat-icon matChipRemove>cancel</mat-icon>
+                            <mat-form-field appearance="fill" class="example-form-field">
+                                <mat-label>שם עובד
+                                </mat-label>
+                                <mat-chip-list #chipGrid aria-label="Enter keywords">
+                                    <mat-chip *ngFor="let doctor of doctors; let i = index;" [selectable]="selectable"
+                                        [removable]="removable" (removed)="removeKeyword(doctor,i)">
+                                        <div class="teze" *ngIf="doctor.Status">
+                                            {{doctor.Employee_Name}}
+                                            <button matChipRemove aria-label="'remove ' + keyword">
+                                                <mat-icon>cancel</mat-icon>
+                                            </button>
                                         </div>
                                     </mat-chip>
-                                    <input placeholder="שם עובד" #fruitInput [formControl]="fruitCtrl"
-                                        [matAutocomplete]="auto" [matChipInputFor]="chipList"
-                                        [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                                        (matChipInputTokenEnd)="add($event)">
                                 </mat-chip-list>
+                                <input placeholder="שם רופא" #doctorsInput [matChipInputFor]="chipGrid"
+                                    [matAutocomplete]="auto" [formControl]="formControl"
+                                    (matChipInputTokenEnd)="add($event)" />
                                 <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
-                                    <mat-option *ngFor="let fruit of filteredFruits | async" [value]="fruit">
-                                        {{fruit.Employee_Name}}
+                                    <mat-option *ngFor="let doctor2 of filteredDoctors | async" [value]="doctor2">
+                                        {{doctor2.Employee_Name}}
                                     </mat-option>
                                 </mat-autocomplete>
                             </mat-form-field>
