--- a/src/app/clinics-dashboard/clinics-dashboard.component.html
+++ b/src/app/clinics-dashboard/clinics-dashboard.component.html
@@ -267,14 +267,14 @@
                     <hr><br>
                     <div class="row">
                         <div class="col">
-                            <h3>• הצעת המחיר תקפה למשך 30 יום מתאריך הנפקת הצעה זו.</h3>
+                            <h3>• תוכנית הטיפול והצעת המחיר הינו ראשונית ייתכנו שינויים במהלך הטיפול ובמחירים.</h3>
                         </div>
                     </div>
-                    <div class="row">
+                    <!-- <div class="row">
                         <div class="col">
                             <h3>• לאחר 30 יום ייתכן ומחיר הטיפולים ישתנה ובמקרה כזה תועבר אליך הצעת מחיר מעודכנת.</h3>
                         </div>
-                    </div>
+                    </div> -->
                     <br>
                     <hr>
                     <div class="row">
