--- a/src/app/eshboz/eshboz.component.html
+++ b/src/app/eshboz/eshboz.component.html
@@ -113,6 +113,9 @@
                                             <mat-option value="ראור"
                                                 >אורתופדיה</mat-option
                                             >
+                                            <mat-option value="ראור-יל"
+                                                >אורתופדיה ילדים</mat-option
+                                            >
                                             <mat-option value="רא-א-ג"
                                                 >אף אוזן וגרון</mat-option
                                             >
