--- a/src/app/orders-to-appointments/orders-to-appointments.component.html
+++ b/src/app/orders-to-appointments/orders-to-appointments.component.html
@@ -593,7 +593,7 @@
         <div class="col-12">
 
             <ol class="d-block">
-                <li class="d-block"><b>מייל:&nbsp;&nbsp;&nbsp;</b> MS@PMC.GOV.IL</li>
+                <li class="d-block"><b>מייל:&nbsp;&nbsp;&nbsp;</b> MS@TZMC.GOV.IL</li>
                 <li class="d-block"><b>פקס:&nbsp;&nbsp;&nbsp;</b> 04-6652754</li>
                 <li class="d-block"><b>טלפון:&nbsp;&nbsp;&nbsp;</b> *8891</li>
             </ol>
